# tikzpaint-rs

./: Cargo.toml  documentation.md  index.html
src/: app.rs  core.rs  figures.rs  lib.rs  main.rs  renderer.rs  todo.txt
src/app/: components.rs  core.rs  main.css  utils.rs
src/app/components/: app_tests.rs  atoms.rs  button.rs  canvas.rs  molecules.rs  topnavbar.rs
src/app/components/app_tests/: text_button.rs
src/app/core/: draw_handler.rs  figure_object_complex.rs  figureobjectcomplex.rs  parser.rs  terminal_text_renderer.rs  terminaltextrenderer.rs  transform.rs
src/app/core/parser/: ast.rs  (+9 more)
src/app/styles/: main.css
src/app/utils/: filler_text.rs  getproperty.rs  serializable.rs  util.rs
src/core/: calc.rs  coordinates.rs  html_canvas.rs  transform.rs  util.rs
src/core/util/: cheap_string.rs  scoped_vec.rs
src/figures/: base.rs  drawables.rs  figureobjects.rs  html_canvas.rs  renderer.rs  shapes.rs  transform.rs  util.rs  utils.rs
src/figures/base/: coordinates.rs  displayable.rs  drawable.rs  figure.rs  figureobject.rs  plotoptions.rs  plottable.rs  projection.rs
src/figures/drawables/: curve.rs  point.rs
src/figures/figureobjects/: line.rs  path.rs  point.rs
src/figures/renderer/: svg_renderer.rs  tikz_renderer.rs  util.rs
src/figures/shapes/: point.rs
src/figures/utils/: cheap_string.rs  cheapstring.rs  coord_transform.rs  coordinates.rs  dimensionerror.rs  hashable.rs  serializable.rs  svg_renderer.rs
src/renderer/: canvas_state_handle.rs  coordinates.rs  html_canvas.rs  svg_renderer.rs  tikz_renderer.rs  transform.rs  util.rs
(+28 files in other folders)
