[package]
name = "tikzpaint-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
gloo="0.6.1"
stylist = { version = "0.12", features = ["yew", "parser"]}
paste = "1.0.11"
js-sys = "0.3"
regex = "1.7.1"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]
